--- a/photo/public/index.html
+++ b/photo/public/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">チャット</div>
+        <div class="title">投稿写真展投票</div>
         <div class="contents input">
           <div>
-            <input class="name" type="text" id="nameInput" placeholder="name" />
+            <input class="name" type="text" id="nameInput" placeholder="あなたの名前" />
           </div>
           <div>
-            <input class="msg" type="text" id="msgInput" placeholder="message" />
+            <input class="msg" type="text" id="msgInput" placeholder="投票したい作品名" />
           </div>
-          <button onclick="sendMessage()">Send</button>
+          <button onclick="sendMessage()">投票</button>
         </div>
         <div class="contents scroll" id="chat">
       </div>
