--- a/photo/public/index.html
+++ b/photo/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebSocket Client</title>
-    <link rel="stylesheet" href="/index.css" type="text/css" />
+    <link rel="stylesheet" href="/photo/public/index.css" type="text/css" />
 </head>
 <body>
     <div class="container">
@@ -21,7 +21,7 @@
         <div class="contents scroll" id="chat">
       </div>
       
-    <script src="/index.js"></script>
+    <script src="/photo/public/index.js"></script>
 
 </body>
 </html>
