--- a/photo/public/index.html
+++ b/photo/public/index.html
@@ -21,7 +21,7 @@
         <div class="contents scroll" id="chat">
       </div>
       
-    <script src="index.js"></script>
+    <script src="./client.js"></script>
 
 </body>
 </html>
