--- a/photo/public/index.html
+++ b/photo/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">投稿写真展投票</div>
+        <div class="title">投稿写真展総選挙</div>
         <div class="contents input">
           <div>
             <input class="name" type="text" id="nameInput" placeholder="あなたの名前" />
