--- a/photo/public/index.html
+++ b/photo/public/index.html
@@ -19,6 +19,10 @@
           <button onclick="sendMessage()">投票</button>
         </div>
         <div class="contents scroll" id="chat">
+          <div id="loading">
+          <div class="spinner"></div>
+          <div class="loading-text">読み込み中です。<br>しばらくお待ちください...</div>
+        </div>
       </div>
       
     <script src="./client.js"></script>
